<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/signup_bg"
        android:orientation="vertical"
        android:padding="20dp">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_name"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_username"
            android:inputType="text"
            android:backgroundTint="@color/colorPrimary"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="text"
            android:backgroundTint="@color/colorPrimary"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            tools:ignore="TextFields"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            tools:ignore="TextFields"
            android:importantForAutofill="no" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/register" />

        <TextView
            android:id="@+id/alreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>


    </LinearLayout>
</LinearLayout>